[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/octahedral_impostors/scripts/dilatate_pipeline.gd" type="Script" id=1]
[ext_resource path="res://addons/octahedral_impostors/scripts/impostor_baker.gd" type="Script" id=2]
[ext_resource path="res://addons/octahedral_impostors/materials/depth_baker.material" type="Material" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.231373, 0.231373, 0.32549, 0.47451 )

[sub_resource type="Environment" id=2]
ambient_light_color = Color( 1, 1, 1, 1 )

[sub_resource type="World" id=3]
environment = SubResource( 2 )

[sub_resource type="QuadMesh" id=4]
material = ExtResource( 3 )
size = Vector2( 2, 2 )

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;
render_mode blend_premul_alpha;

uniform sampler2D u_alpha_tex;
uniform int u_distance = 16;
uniform bool u_alpha_overwrite = true;


vec4 dilate(sampler2D a_tex, sampler2D tex, vec2 coords, vec2 texel_size, int dist, float alpha_cutoff)
{
	vec2 offsets[8] = {
		vec2(-1,0),vec2(1,0), vec2(0,1), vec2(0,-1), 
		vec2(-1,1), vec2(1,1), vec2(1,-1), vec2(-1,-1)
	};
	vec4 sample = textureLod(tex, coords, 0);
	vec4 a_sample = textureLod(a_tex, coords, 0);
	if(a_sample.a > alpha_cutoff)
		return sample;

	for(int curr_dist = 0; curr_dist < dist; curr_dist++)
	{
		for(int o = 0; o < 8; o++)
		{
			vec2 off_coords = offsets[o] * texel_size * float(curr_dist + 1);
			vec4 off_sample = textureLod(tex, coords + off_coords, 0);
			vec4 off_a_sample = textureLod(a_tex, coords + off_coords, 0);
			if (off_a_sample.a > alpha_cutoff)
			{
				if(u_alpha_overwrite)
					return off_sample;
				else
					//viewport will lose alpha rgb if alpha is below 0.5
					return vec4(off_sample.rgb, a_sample.a);
			}
			
		}
	}
	return sample;
}

void fragment() {
	
    COLOR = dilate(u_alpha_tex, TEXTURE, UV, TEXTURE_PIXEL_SIZE, u_distance, 0.95);
	//COLOR.a = 1.0;
}
"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/u_distance = 32
shader_param/u_alpha_overwrite = true

[sub_resource type="ViewportTexture" id=7]
viewport_path = NodePath("DilatatePipeline/DilateViewport")

[node name="ImpostorBaker" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 300.0
margin_top = 154.0
margin_right = -300.0
margin_bottom = -171.0
window_title = "Create Octahedral Impostor"
resizable = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MainContainer"]
margin_right = 220.0
margin_bottom = 275.0
rect_min_size = Vector2( 220, 0 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="VBoxContainer" parent="MainContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -7.0
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Generate" type="Button" parent="MainContainer/Panel/container"]
margin_right = 209.0
margin_bottom = 20.0
text = "Generate"

[node name="progress" type="ProgressBar" parent="MainContainer/Panel/container"]
margin_top = 26.0
margin_right = 209.0
margin_bottom = 40.0
max_value = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/Panel/container"]
margin_top = 46.0
margin_right = 209.0
margin_bottom = 70.0

[node name="Label" type="Label" parent="MainContainer/Panel/container/HBoxContainer"]
margin_right = 131.0
margin_bottom = 24.0
hint_tooltip = "How much space the object covers in the atlas tiles."
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Atlas Coverage"
valign = 1

[node name="SpinBoxCoverage" type="SpinBox" parent="MainContainer/Panel/container/HBoxContainer"]
margin_left = 135.0
margin_right = 209.0
margin_bottom = 24.0
value = 100.0
allow_greater = true
suffix = "%"

[node name="HBoxContainer3" type="HBoxContainer" parent="MainContainer/Panel/container"]
margin_top = 76.0
margin_right = 209.0
margin_bottom = 100.0

[node name="Label4" type="Label" parent="MainContainer/Panel/container/HBoxContainer3"]
margin_right = 131.0
margin_bottom = 24.0
hint_tooltip = "The number of rows and columns generated in the atlases."
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Grid size"
valign = 1

[node name="SpinBoxGridSize" type="SpinBox" parent="MainContainer/Panel/container/HBoxContainer3"]
margin_left = 135.0
margin_right = 209.0
margin_bottom = 24.0
min_value = 2.0
max_value = 64.0
value = 16.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MainContainer/Panel/container"]
margin_top = 106.0
margin_right = 209.0
margin_bottom = 126.0

[node name="Label2" type="Label" parent="MainContainer/Panel/container/HBoxContainer2"]
margin_right = 144.0
margin_bottom = 20.0
hint_tooltip = "The resolution of the atlases."
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Atlas Resolution"
valign = 1

[node name="OptionButtonImgRes" type="OptionButton" parent="MainContainer/Panel/container/HBoxContainer2"]
margin_left = 148.0
margin_right = 209.0
margin_bottom = 20.0
text = "4096"
items = [ "1024", null, false, 1, null, "2048", null, false, 2, null, "4096", null, false, 3, null, "8192", null, false, 4, null ]
selected = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="MainContainer/Panel/container"]
margin_top = 132.0
margin_right = 209.0
margin_bottom = 156.0

[node name="Label2" type="Label" parent="MainContainer/Panel/container/HBoxContainer4"]
margin_right = 181.0
margin_bottom = 24.0
hint_tooltip = "Whether the tiles are generated for the entire sphere. Set to true if the impostor will be viewed from all angles, including from the bottom."
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Full Sphere"
valign = 1

[node name="CheckboxFullSphere" type="CheckBox" parent="MainContainer/Panel/container/HBoxContainer4"]
margin_left = 185.0
margin_right = 209.0
margin_bottom = 24.0

[node name="HBoxContainer5" type="HBoxContainer" parent="MainContainer/Panel/container"]
margin_top = 162.0
margin_right = 209.0
margin_bottom = 182.0

[node name="Label3" type="Label" parent="MainContainer/Panel/container/HBoxContainer5"]
margin_right = 121.0
margin_bottom = 20.0
hint_tooltip = "Whether the impostor should use a high quality shader."
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Profile"
valign = 1

[node name="OptionButtonShaderType" type="OptionButton" parent="MainContainer/Panel/container/HBoxContainer5"]
margin_left = 125.0
margin_right = 209.0
margin_bottom = 20.0
text = "Standard"
items = [ "Light", null, false, 0, null, "Standard", null, false, 1, null, "TextureArray", null, false, 2, null ]
selected = 1

[node name="HBoxContainer7" type="HBoxContainer" parent="MainContainer/Panel/container"]
margin_top = 188.0
margin_right = 209.0
margin_bottom = 212.0

[node name="Label" type="Label" parent="MainContainer/Panel/container/HBoxContainer7"]
margin_right = 181.0
margin_bottom = 24.0
hint_tooltip = "Exports data atlas images in reduced resolution."
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Optimize Size"
valign = 1

[node name="CheckBoxHalfResolution" type="CheckBox" parent="MainContainer/Panel/container/HBoxContainer7"]
margin_left = 185.0
margin_right = 209.0
margin_bottom = 24.0

[node name="HBoxContainer6" type="HBoxContainer" parent="MainContainer/Panel/container"]
margin_top = 218.0
margin_right = 209.0
margin_bottom = 242.0

[node name="Label" type="Label" parent="MainContainer/Panel/container/HBoxContainer6"]
margin_right = 181.0
margin_bottom = 24.0
hint_tooltip = "Whether to export the impostor itself. Disable if you just want the atlas images."
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Packed Scene"
valign = 1

[node name="CheckBoxPackedScene" type="CheckBox" parent="MainContainer/Panel/container/HBoxContainer6"]
margin_left = 185.0
margin_right = 209.0
margin_bottom = 24.0
pressed = true

[node name="ViewportContainer" type="ViewportContainer" parent="MainContainer"]
margin_left = 232.0
margin_right = 424.0
margin_bottom = 275.0
size_flags_horizontal = 7
size_flags_vertical = 7
stretch = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ViewportBaking" type="Viewport" parent="MainContainer/ViewportContainer"]
size = Vector2( 192, 275 )
size_override_stretch = true
own_world = true
world = SubResource( 3 )
transparent_bg = true
handle_input_locally = false
hdr = false
debug_draw = 1
render_target_update_mode = 0

[node name="BakedContainer" type="Spatial" parent="MainContainer/ViewportContainer/ViewportBaking"]

[node name="Camera" type="Camera" parent="MainContainer/ViewportContainer/ViewportBaking"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.45593 )
projection = 1
current = true
fov = 45.0
far = 200.0

[node name="DepthPostProcess" type="MeshInstance" parent="MainContainer/ViewportContainer/ViewportBaking/Camera"]
visible = false
cast_shadow = 0
extra_cull_margin = 16384.0
mesh = SubResource( 4 )
material/0 = null

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.14
anchor_top = 0.151
anchor_right = 0.864
anchor_bottom = 0.806
margin_left = -0.128601
margin_top = 0.0906982
margin_right = -0.104614
margin_bottom = -0.034317
window_title = "Save your impostor"
dialog_hide_on_ok = true
current_file = "impostor.tscn"
current_path = "res://impostor.tscn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DilatatePipeline" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="DilateViewport" type="Viewport" parent="DilatatePipeline"]
size = Vector2( 1024, 1024 )
transparent_bg = true
usage = 0
debug_draw = 1
render_target_v_flip = true
gui_disable_input = true

[node name="tex" type="TextureRect" parent="DilatatePipeline/DilateViewport"]
material = SubResource( 6 )
margin_right = 4096.0
margin_bottom = 4096.0
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preview" type="TextureRect" parent="DilatatePipeline"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="popup_hide" from="." to="." method="_on_ImpostorBaker_popup_hide"]
[connection signal="pressed" from="MainContainer/Panel/container/Generate" to="." method="_on_Generate_pressed"]
[connection signal="value_changed" from="MainContainer/Panel/container/HBoxContainer/SpinBoxCoverage" to="." method="_on_SpinBox_value_changed"]
[connection signal="value_changed" from="MainContainer/Panel/container/HBoxContainer3/SpinBoxGridSize" to="." method="_on_SpinBoxGridSize_value_changed"]
[connection signal="item_selected" from="MainContainer/Panel/container/HBoxContainer2/OptionButtonImgRes" to="." method="_on_OptionButtonImgRes_item_selected"]
[connection signal="toggled" from="MainContainer/Panel/container/HBoxContainer4/CheckboxFullSphere" to="." method="_on_CheckboxFullSphere_toggled"]
[connection signal="item_selected" from="MainContainer/Panel/container/HBoxContainer5/OptionButtonShaderType" to="." method="_on_OptionButtonShaderType_item_selected"]
[connection signal="toggled" from="MainContainer/Panel/container/HBoxContainer7/CheckBoxHalfResolution" to="." method="_on_CheckBoxHalfResolution_toggled"]
[connection signal="toggled" from="MainContainer/Panel/container/HBoxContainer6/CheckBoxPackedScene" to="." method="_on_CheckBoxPackedScene_toggled"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
